# cpanel-mail-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: README.md  cpanel-mail-mcp.service  install.sh
evals/: README.md  fixture-notes.md  questions.xml
src/cpanel_mail_mcp/: __init__.py  accounts.py  admin.py  cf_access.py  errors.py  ics.py  idempotency.py  imap_ops.py  models.py  oauth_proxy.py  rate_limit.py  server.py  smtp_ops.py  users.py  utf7.py
tests/: test_accounts.py  test_errors.py  test_ics.py  test_rate_limit_and_idempotency.py  test_server_wellknown.py  test_smtp_build.py  test_users.py  test_utf7.py
